--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "collection": "@nestjs/schematics",
+  "sourceRoot": "src",
   "compilerOptions": {
     "typeRoots": ["node_modules/@types"],
     "module": "commonjs",
