--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,18 @@
 {
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
+    {
+      "src": "nest-cli.json",
+      "use": "@vercel/node@2.1.0"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.js" }
+    { "src": "/(.*)", "dest": "nest-server.js" }
   ],
   "env": {
-    "MY_VAR": "Hello World"
-  },
-  "outputDirectory": "dist"
+    "NODE_ENV": "production"
+  }
 }
